--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "config": {
-    "ionic_copy": "./config/copy.config.js"
+    "ionic_copy": "./config/copy.config.js",
+    "ionic_sass": "./config/sass.config.js"
   },
   "dependencies": {
     "@angular/common": "2.4.8",
