--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+    "start": "ionic serve --nobrowser"
   },
   "config": {
     "ionic_copy": "./config/copy.config.js",
@@ -24,6 +25,7 @@
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
     "@ionic/storage": "2.0.0",
+    "angular2-localstorage": "^0.4.0",
     "font-awesome": "^4.7.0",
     "ionic-angular": "2.2.0",
     "ionic-native": "2.4.1",
