--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "ionic-angular": "2.2.0",
     "ionic-native": "2.4.1",
+    "ionic2-calendar": "^0.2.4",
     "ionicons": "3.0.0",
     "ng2-webstorage": "^1.5.0",
     "rxjs": "5.0.1",
