--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "target": "es5"
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "node_modules/hammerjs/hammer.min.js"
   ],
   "exclude": [
     "node_modules"
