--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-server": "2.4.8",
     "@ionic/storage": "2.0.0",
     "font-awesome": "^4.7.0",
+    "intl": "^1.2.5",
     "ionic-angular": "2.2.0",
     "ionic-native": "2.4.1",
     "ionic2-calendar": "^0.2.4",
